# bats_bdd

./: Cargo.toml  README.md  install.sh  repomix-output.xml  step_definitions.bash  test_fixes.feature
.github/workflows/: README.md  release.yml
examples/: calculator.bats  calculator.feature  step_definitions.bash
packaging/homebrew/: bats-bdd.rb
skills/bdd-gherkin/: SKILL.md
src/: lib.rs  main.rs
src/bats/: mod.rs
src/compiler/: bats.rs  mod.rs
src/parser/: ast.rs  gherkin.pest  i18n.rs  mod.rs
templates/: sample.feature
tests/: simple_test.rs
tests/gherkin_features/: all_step_keywords.feature  background.feature  background_steps.bash  background_steps.bats  i18n_portuguese.feature  i18n_steps.bash  outline_simple_steps.bash  outline_steps.bash  scenario_outline.feature  scenario_outline_simple.bats  scenario_outline_simple.feature  step_definitions.bash  step_keywords_steps.bash  tags.feature  tags_debug.rs  tags_feature.feature  tags_feature_test.feature  tags_simple.feature  tags_steps.bash
