[package]
name = "bats-bdd-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
